@@ -17,7 +17,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <lombok.version>1.18.30</lombok.version>
+        <lombok.version>1.18.46</lombok.version>
         <mapstruct.version>1.6.3</mapstruct.version>
     </properties>
 
@@ -177,6 +177,13 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.12</version>
@@ -186,6 +193,7 @@
                         <include>com/daiphat/coreapi/infrastructure/cache/**</include>
                         <include>com/daiphat/coreapi/application/service/auth/**</include>
                         <include>com/daiphat/coreapi/application/service/notification/**</include>
+                        <include>com/daiphat/coreapi/application/service/lotteries/**</include>
                     </includes>
                 </configuration>
                 <executions>
